<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/welcome_back"
                android:textSize="32sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/recently_played"
                        android:textSize="24sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recently_played"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:contentPadding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favourites"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:contentPadding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:contentPadding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/play_progress"
            style="@style/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="1dp"
            android:max="100"
            android:progress="70" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/now_playing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/mozart_sonata"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:id="@+id/play_pause_btn"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/play_pause_button"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_play_circle_outline"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>