<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SongActivity">

    <ImageView
        android:id="@+id/album_art_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"
        tools:src="@drawable/generic_album_art_4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/playing_from_album"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Album name goes here" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/album_art"
                android:scaleType="center"
                tools:src="@drawable/generic_album_art_4" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/mozart_sonata" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Artist name goes here" />

        <ProgressBar
            android:id="@+id/play_progress"
            style="@style/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="1dp"
            android:max="100"
            android:progress="70" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="00:00"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/song_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:ignore="HardcodedText"
                tools:text="00:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rewind"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:contentDescription="@string/rewind"
                android:src="@drawable/ic_fast_rewind" />

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/play_pause_button"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/forward"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:contentDescription="@string/forward"
                android:src="@drawable/ic_fast_forward" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>